--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </header>
 
   <main class="grid">
-    <section class="amigo"><a href="perfiles/santy.html"><img src="img/santy.jpg" alt="Santy"><h2>Santy</h2></a></section>
+    <section class="amigo"><a href="perfiles/santy.html"><img src="img/Santy.jpg" alt="Santy"><h2>Santy</h2></a></section>
     <section class="amigo"><a href="perfiles/vietnam.html"><img src="img/vietnam.jpg" alt="Vietnam"><h2>Vietnam</h2></a></section>
     <section class="amigo"><a href="perfiles/pichichi.html"><img src="img/pichichi.jpg" alt="Pichichi"><h2>Pichichi</h2></a></section>
     <section class="amigo"><a href="perfiles/fede.html"><img src="img/fede.jpg" alt="Fede"><h2>Fede</h2></a></section>
